<resources>
    <string name="app_name">CustomCS</string>

    <string name="inicio">Inicio</string>
    <string name="acerdaDe">Acerca de…</string>
    <string name="resumen">Resumen</string>
    <string name="similares">Similares</string>

    <string name="descNavHeader">Inicio claro shop!</string>
    <string name="descLocation">Localizacion</string>
    <string name="descArrowRight">Entrar</string>
    <string name="descArticulo">Artículo</string>
    <string name="descFavorito">Favorito</string>
    <string name="descCompartir">Compartir</string>

    <string name="claroShop">Claro Shop</string>
    <string name="iniciarSesion">Iniciar sesión</string>

    <string name="carritoCompras">Carrito</string>
    <string name="favorito">Favoritos</string>
    <string name="buscar">Buscar</string>

    <string name="solicitarCP">Ingresa un código postal</string>

    <!--ingoGeneral-->
    <string name="nombreArticulo">Lapto Ideapad 330-14Ast Lenovo</string>
    <string name="vendidoPor">Vendido por sanborns</string>
    <string name="opiniones">(32 opiniones)</string>
    <string name="precioOriginal">$7,649</string>
    <string name="descuentoPorcentaje">-10%</string>
    <string name="ultimoPrecio">$7,649</string>
    <string name="descPrecio">MXN Ahorras $1070</string>
    <string name="envioGratis">Envio Gratis</string>
    <string name="compraSegura">Compra segura</string>

    <!--Botones-->
    <string name="comprarAhora">Compara ahora</string>
    <string name="agregarAlCarrito">Agregar al carrito</string>

    <!--Secciones-->
    <string name="seleccionarColor">Seleccionar color\n2 colores</string>
    <string name="cantida">Cantidad</string>
    <string name="fechaEntrega">LLega enre 23y 24 de septiembre</string>
    <string name="mesesSinIntereses">Hasta 48 meses de $143</string>

</resources>