<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d8"
            android:layout_marginBottom="@dimen/d8"
            android:text="@string/nombreArticulo"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vendidoPor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/amarillo"
                android:rating="4"
                android:scaleX="0.9"
                android:scaleY="0.9"
                android:stepSize="1" />
            <!--fixme
                style="@style/rating_bar"-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/opiniones" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precioOriginal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/d8"
                android:layout_height="wrap_content"
                android:text="@string/descuentoPorcentaje" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/negro"
                android:text="@string/ultimoPrecio" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/d8"
                android:textSize="12sp"
                android:layout_height="wrap_content"
                android:text="@string/descPrecio" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/envioGratis"
            android:textAllCaps="true"
            android:textColor="@color/verde"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>