<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        style="@style/btn_Comprar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comprarAhora" />

    <Button
        style="@style/btnCarrito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregarAlCarrito" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_compra_segura"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/compraSegura"
        android:textColor="@color/negro" />

    <include layout="@layout/item_divider" />

</LinearLayout>